# neural-tests

./: neural-tests.cabal  stack.yaml
app/: Sherlock.hs
data/: holmes.txt
