name:                neural-tests
version:             0.1.0.0
synopsis:            Tests for experimental neural library
description:         Please see README.md
homepage:            https://github.com/mstksg/neural-tests#readme
license:             BSD3
license-file:        LICENSE
author:              Justin Le
maintainer:          justin@jle.im
copyright:           (c) Justin Le 2016
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable neural-tests-sherlock
  hs-source-dirs:      app
  main-is:             Sherlock.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , deepseq
                     , finite-typelits
                     , hmatrix
                     , linear
                     , mwc-random
                     , neural
                     , neural-tests
                     , primitive
                     , transformers
                     , typelits-witnesses
                     , vector
  default-language:    Haskell2010

test-suite neural-tests-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , neural-tests
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mstksg/neural-tests
